--- a/src/styles/components/mainMenu/_mainMenu.scss
+++ b/src/styles/components/mainMenu/_mainMenu.scss
@@ -9,7 +9,7 @@
     flex-direction: row-reverse;
     height: $main-menu-height;
     justify-content: space-between;
-
+    width: 100%;
     .main-menu__left-segment {
         display: flex;
         flex-direction: row;                
