--- a/src/styles/settings/_colors.scss
+++ b/src/styles/settings/_colors.scss
@@ -3,6 +3,7 @@ $add-item-button-background: #0fca80;
 $theme-background-header: #fff;
 $theme-background-body: #f9f9f9;
 $theme-box-shadow: 0 5px 6px 0 rgba(0, 0, 0, 0.1);
+$theme-box-shadow-searchbar: 0 2px 6px 0 rgba(0,0,0,.1);
 $theme-footer-background: #363636;
 $theme-highlight-gray: #dbdbd1;
 $theme-highlight-yellow: #fdf9c5;
