--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -15,3 +15,5 @@
 @import './components/body/realestate/topBoxesRow/mediaBox';
 @import './components//body//realestate/searchBar/searchFields/rooms';
 @import './components/body/realestate/searchBar/searchFields/price';
+@import './components/body/realestate/searchBar/advancedSearch';
+@import './components/body/realestate/searchBar/goSearch'
