--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -30,4 +30,40 @@ body {
         text-decoration: none;
     }
 }
+//serach bar
+.searchBar-button {
+    direction: rtl;
+    font-size: $font-size-xs;
+    line-height: $std-size * 1.5;
+    margin: $searchField-container-spacing;
+    margin-top: $std-size * 1.9;
+    padding: $searchField-container-spacing;
+    padding-left: $std-size;
+}
+.searchBar-flexbox-column {
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+    flex-shrink: 1;
+    padding: $searchField-container-spacing;
+}
+.searchBar-header {
+    color: $theme-text;
+    direction: rtl;
+    font-size: $font-size-xs;
+    font-weight: 500;
+    padding-right: $std-size * 0.2;
+}
+.searchBar-input-bar {
+    border: 1px solid $theme-box-border;
+    color: lighten($theme-text, 30%);
+    direction: rtl;
+    display: flex;
+    flex-grow: 1;
+    flex-shrink: 1;
+    font-size: $font-size-xxs;
+    justify-content: space-between;
+    line-height: $std-size;
+    padding: $std-size * 0.6;
+}
 
