--- a/src/styles/components/body/realestate/_realestateBody.scss
+++ b/src/styles/components/body/realestate/_realestateBody.scss
@@ -5,9 +5,16 @@
     margin-top: 8px;
     min-height: 1200px;
     width: 100%;
-    z-index: -1;
     .realestate-body__content-area {
-        width: 65%;
+        width: 75%;
+        z-index: 1;
+        @media (max-width: $media-breakpoint) {
+            width: 95%;
+            overflow-x: hidden;
+        }
+        .realestate-content {
+            background: $theme-background-body;
+        }
     }
 }
 .realestate-body__content-area {
