--- a/src/styles/components/body/realestate/topBoxesRow/_topBoxesRow.scss
+++ b/src/styles/components/body/realestate/topBoxesRow/_topBoxesRow.scss
@@ -3,5 +3,6 @@
     display: flex;
     flex-direction: row-reverse;
     justify-content: space-between;
+    margin-top: $std-size;
     overflow: hidden;
 }
