--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -41,6 +41,7 @@ body {
     padding-left: $std-size;
 }
 .searchBar-flexbox-column {
+    direction: rtl;
     display: flex;
     flex-direction: column;
     flex-grow: 1;
@@ -65,5 +66,6 @@ body {
     justify-content: space-between;
     line-height: $std-size;
     padding: $std-size * 0.6;
+    width: 100%;
 }
 
