--- a/src/styles/components/body/realestate/searchBar/searchFields/_location.scss
+++ b/src/styles/components/body/realestate/searchBar/searchFields/_location.scss
@@ -6,10 +6,11 @@
     .location-search__input {
         direction: rtl;
         padding-top: $std-size * 0.5;
+        max-width: $std-size * 16;
+        min-width: $std-size * 11;
         .location-input__container {           
             .location-input__bar {
                 @extend .searchBar-input-bar;
-                min-width: $std-size * 11;
                 &:focus{
                     outline-width: 0;
                 }
