--- a/src/styles/components/body/realestate/searchBar/searchFields/_price.scss
+++ b/src/styles/components/body/realestate/searchBar/searchFields/_price.scss
@@ -4,13 +4,15 @@
         @extend .searchBar-header;
     }
     .price__input-container {
+        direction: rtl;
         display: flex;
         justify-content: center;
         padding-top: $std-size * 0.5;
+        max-width: $std-size * 16;
+        min-width: $std-size * 8;
         .price__min {
             @extend .searchBar-input-bar;
-            min-width: $std-size * 5;
-            max-width: $std-size * 6;
+            width: 50%;
             &:focus{
                 outline-width: 0;
             }
