fromToInput and number picker as two independent components

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -16,4 +16,6 @@
 @import './components//body//realestate/searchBar/searchFields/rooms';
 @import './components/body/realestate/searchBar/searchFields/price';
 @import './components/body/realestate/searchBar/advancedSearch';
-@import './components/body/realestate/searchBar/goSearch'
+@import './components/body/realestate/searchBar/goSearch';
+@import './components/body/common/fromToInput';
+@import './components/body/common/numberPicker';
