--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -19,3 +19,4 @@
 @import './components/body/realestate/searchBar/goSearch';
 @import './components/body/common/fromToInput';
 @import './components/body/common/numberPicker';
+@import './components/body/realestate/searchBar/searchFields/roommates';
