--- a/src/styles/components/body/realestate/searchBar/searchFields/_price.scss
+++ b/src/styles/components/body/realestate/searchBar/searchFields/_price.scss
@@ -8,11 +8,11 @@
         display: flex;
         justify-content: center;
         padding-top: $std-size * 0.5;
-        max-width: $std-size * 16;
+        max-width: $std-size * 24;
         min-width: $std-size * 8;
         .price__min {
             @extend .searchBar-input-bar;
-            width: 50%;
+           // width: 50%;
             &:focus{
                 outline-width: 0;
             }
