--- a/src/styles/components/body/realestate/searchBar/searchFields/_roommates.scss
+++ b/src/styles/components/body/realestate/searchBar/searchFields/_roommates.scss
@@ -1,14 +1,14 @@
-.rooms {
+.roommates {
     @extend .searchBar-flexbox-column;
-    .rooms__header {
+    .roommates__header {
         @extend .searchBar-header;
     }
-    .rooms__input {
+    .roommates__input {
         direction: rtl;
         max-width: $std-size * 11;
         min-width: $std-size * 6;
         padding-top: $std-size * 0.5;
-        .rooms-bar {
+        .roommates-bar {
             @extend .searchBar-input-bar;
             .symbol__arrow {
                 color: black;
