--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -20,3 +20,5 @@
 @import './components/body/common/fromToInput';
 @import './components/body/common/numberPicker';
 @import './components/body/realestate/searchBar/searchFields/roommates';
+@import './components/body/realestate/searchBar/searchFields/dealType';
+@import './components/body/realestate/searchBar/searchFields/searchFieldsCommonStyles';
