--- a/src/styles/components/body/realestate/searchBar/_advancedSearch.scss
+++ b/src/styles/components/body/realestate/searchBar/_advancedSearch.scss
@@ -3,5 +3,6 @@
     background: $theme-selected;
     .symbol__circled-plus {
         mix-blend-mode: multiply;
+        padding-left: $std-size * 0.5;
     }
 }
