--- a/src/styles/settings/_sizes.scss
+++ b/src/styles/settings/_sizes.scss
@@ -14,6 +14,7 @@ $media-breakpoint: 1185px;
 $navbar-height: $std-size * 3.5;
 $side-ad-height: $std-size * 37.5;
 $side-ad-width: $std-size * 7.5;
+$searchbar-padding: $std-size;
 $searchbox-Height: $std-size * 3;
 $searchField-container-spacing: $std-size * 0.5;
 $top-ad-height: $std-size * 11.25;
