--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -15,10 +15,11 @@
 @import './components/body/realestate/topBoxesRow/mediaBox';
 @import './components//body//realestate/searchBar/searchFields/rooms';
 @import './components/body/realestate/searchBar/searchFields/price';
-@import './components/body/realestate/searchBar/advancedSearch';
+@import './components/body/realestate/searchBar/advancedSearch/advancedSearch';
 @import './components/body/realestate/searchBar/goSearch';
 @import './components/body/common/fromToInput';
 @import './components/body/common/numberPicker';
 @import './components/body/realestate/searchBar/searchFields/roommates';
 @import './components/body/realestate/searchBar/searchFields/dealType';
 @import './components/body/realestate/searchBar/searchFields/searchFieldsCommonStyles';
+@import './components/body/realestate/searchBar/advancedSearch/PropertiesCheckboxMenu'
