--- a/src/styles/components/body/realestate/searchBar/searchFields/_roommates.scss
+++ b/src/styles/components/body/realestate/searchBar/searchFields/_roommates.scss
@@ -18,7 +18,12 @@
         .has-data {
             color: $theme-text-darker;
         }   
-     
+    }
+    .from-to-input {
+        @extend .from-to-input__searchbar-template;
+    }
+    .number-picker {
+        @extend .number-picker__searchbar-template;
     }
 }
     
