--- a/src/styles/settings/_sizes.scss
+++ b/src/styles/settings/_sizes.scss
@@ -1,6 +1,7 @@
 $std-size: 1.0rem;
 $font-size-xxs: $std-size * 0.75;
 $font-size-xs: $std-size * 0.85;
+$font-size-s-xs: $std-size * 0.92;
 $font-size-s: $std-size * 1.0;
 $font-size-m: $std-size * 1.2;
 $font-size-l: $std-size * 1.4;
