--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -22,4 +22,6 @@
 @import './components/body/realestate/searchBar/searchFields/roommates';
 @import './components/body/realestate/searchBar/searchFields/dealType';
 @import './components/body/realestate/searchBar/searchFields/searchFieldsCommonStyles';
-@import './components/body/realestate/searchBar/advancedSearch/PropertiesCheckboxMenu'
+@import './components/body/realestate/searchBar/advancedSearch/PropertiesCheckboxMenu';
+@import './components/body/realestate/searchBar/advancedSearch/floorPicker';
+@import './components/body/realestate/searchBar/advancedSearch/advancedSearchRow';
