--- a/src/styles/components/body/realestate/searchBar/searchFields/_rooms.scss
+++ b/src/styles/components/body/realestate/searchBar/searchFields/_rooms.scss
@@ -16,6 +16,11 @@
             }
         }   
     }
-    
+    .from-to-input {
+        @extend .from-to-input__searchbar-template;
+    }
+    .number-picker {
+        @extend .number-picker__searchbar-template;
+    }
 }
     
