--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -25,3 +25,4 @@
 @import './components/body/realestate/searchBar/advancedSearch/PropertiesCheckboxMenu';
 @import './components/body/realestate/searchBar/advancedSearch/floorPicker';
 @import './components/body/realestate/searchBar/advancedSearch/advancedSearchRow';
+@import './components//body/realestate/searchBar/advancedSearch/sizePicker';
