--- a/src/styles/components/body/realestate/searchBar/advancedSearch/_advancedSearchRow.scss
+++ b/src/styles/components/body/realestate/searchBar/advancedSearch/_advancedSearchRow.scss
@@ -1,6 +1,6 @@
 .advanced-search-row {
     display: flex;
     flex-direction: row-reverse;
-    justify-content: space-around;
+    justify-content: center;
     padding: $std-size * 0.5;
 }
