--- a/src/styles/components/body/realestate/searchBar/searchFields/_roommates.scss
+++ b/src/styles/components/body/realestate/searchBar/searchFields/_roommates.scss
@@ -19,8 +19,8 @@
             color: $theme-text-darker;
         }   
     }
-    .from-to-input {
-        @extend .from-to-input__searchbar-template;
+    .range-input {
+        @extend .range-input__searchbar-template;
     }
     .number-picker {
         @extend .number-picker__searchbar-template;
