--- a/src/styles/components/body/realestate/searchBar/searchFields/_rooms.scss
+++ b/src/styles/components/body/realestate/searchBar/searchFields/_rooms.scss
@@ -16,8 +16,8 @@
             }
         }   
     }
-    .from-to-input {
-        @extend .from-to-input__searchbar-template;
+    .range-input {
+        @extend .range-input__searchbar-template;
     }
     .number-picker {
         @extend .number-picker__searchbar-template;
