--- a/src/styles/components/body/common/_rangeInput.scss
+++ b/src/styles/components/body/common/_rangeInput.scss
@@ -1,11 +1,11 @@
-.from-to-input__searchbar-template {
+.range-input__searchbar-template {
     @extend .flex-center;
     box-shadow: $theme-box-shadow;
     flex-direction: row; 
     padding: $std-size;
     position: absolute;
     width: $std-size * 10;
-    .from-to-input__from {
+    .range-input__from {
         border: 1px solid $theme-box-border;
         color: lighten($theme-text, 30%);
         display: flex;
@@ -19,19 +19,19 @@
             margin: 0 $std-size * 0.5;
         }
     }
-    .from-to-input__upto {
-        @extend .from-to-input__from
+    .range-input__upto {
+        @extend .range-input__from
     }  
 } 
-.from-to-input__advanced-search-row-template {
-    .from-to-input {
+.range-input__advanced-search-row-template {
+    .range-input {
         @extend .flex-center;
         flex-direction: row; 
         justify-content: space-between;
         margin: $std-size;
         position: relative;
     }
-    .from-to-input__from {
+    .range-input__from {
         border: 1px solid $theme-box-border;
         color: lighten($theme-text, 30%);
         cursor: pointer;
@@ -47,7 +47,7 @@
             margin: 0 $std-size * 0.5;
         }
     }
-    .from-to-input__upto {
-        @extend .from-to-input__from
+    .range-input__upto {
+        @extend .range-input__from
     }  
 }
