--- a/src/styles/components/body/realestate/searchBar/advancedSearch/_sizePicker.scss
+++ b/src/styles/components/body/realestate/searchBar/advancedSearch/_sizePicker.scss
@@ -3,9 +3,7 @@
     padding: $std-size*0.6;
     max-width: $std-size * 18;
     .range-picker__header {
-        color: $theme-text;
-        font-size: $font-size-s-xs;
-        padding-right: $std-size;
+        @extend .searchBar-avdanced-search-header;
     }
     .range-picker__input-container {
         @extend .flex-center;
