--- a/src/styles/components/body/realestate/searchBar/advancedSearch/_advancedSearch.scss
+++ b/src/styles/components/body/realestate/searchBar/advancedSearch/_advancedSearch.scss
@@ -4,7 +4,7 @@
         background: $theme-selected;
         display: flex;
         justify-content: space-around;
-        @extend .searchBar-button;
+        @extend .searchBar-button !optional;
         .button-text {
             background-color: inherit;
             margin: 0 $std-size * 0.4;
