--- a/src/styles/components/body/realestate/searchBar/advancedSearch/_sizePicker.scss
+++ b/src/styles/components/body/realestate/searchBar/advancedSearch/_sizePicker.scss
@@ -1,19 +1,19 @@
 .size-picker {
-    @extend .searchBar-flexbox-column;
+    @extend .searchBar-flexbox-column !optional;
     padding: $std-size*0.6;
     max-width: $std-size * 18;
     .range-picker__header {
-        @extend .searchBar-avdanced-search-header;
+        @extend .searchBar-avdanced-search-header !optional;
     }
     .range-picker__input-container {
-        @extend .flex-center;
+        @extend .flex-center !optional;
         flex-direction: row; 
         justify-content: space-between;
         margin: $std-size;
         position: relative;
         .range-picker__min {
             border: 1px solid $theme-box-border;
-            color: lighten($theme-text, 30%);
+            color: $theme-text-lighter;
             display: flex;
             flex-grow: 1;
             flex-shrink: 1;
