--- a/src/styles/components/body/realestate/searchBar/searchFields/_propertyType.scss
+++ b/src/styles/components/body/realestate/searchBar/searchFields/_propertyType.scss
@@ -1,14 +1,15 @@
 .property-type {
     @extend .searchBar-flexbox-column;
     .property-type__header {
-        @extend .searchBar-header;
+        @extend .searchBar-header !optional;
     }
     .property-type__input {
         direction: rtl;
         padding-top: $std-size * 0.5;
         .property-type__bar {
+            color: $theme-text-lighter;
             min-width: $std-size * 8;
-            @extend .searchBar-input-bar;
+            @extend .searchBar-input-bar !optional;
             .symbol__arrow {
                 color: black;
                 font-size: $font-size-xxs;
