--- a/src/styles/components/body/realestate/searchBar/searchFields/_rooms.scss
+++ b/src/styles/components/body/realestate/searchBar/searchFields/_rooms.scss
@@ -9,6 +9,7 @@
         min-width: $std-size * 6;
         padding-top: $std-size * 0.5;
         .rooms-bar {
+            color: $theme-text-lighter;
             @extend .searchBar-input-bar;
             .symbol__arrow {
                 color: black;
