--- a/src/styles/components/mainMenu/_mainMenu.scss
+++ b/src/styles/components/mainMenu/_mainMenu.scss
@@ -45,10 +45,10 @@
             background: $theme-background-header;
             height: 100%;
             padding: $std-size 0 $std-size $std-size;
-            @extend .linked-text;
-            @extend .flex-center;
+            @extend .linked-text !optional;
+            @extend .flex-center !optional;
             a{
-                @extend .flex-center;
+                @extend .flex-center !optional;
             }
             img {
                 background: $theme-background-header;
@@ -60,12 +60,12 @@
         }
     }
     .main-menu__nav-items-container {
-        @extend .flex-center;        
+        @extend .flex-center !optional;        
         flex-direction: row-reverse;
     }
     .main-menu__nav-item {
-        @extend .flex-center;
-        @extend .linked-text;
+        @extend .flex-center !optional;
+        @extend .linked-text !optional;
         background: $theme-background-header;
         font-size: $font-size-s;
         height: 100%;
@@ -98,7 +98,7 @@
             width: auto;     
             z-index: 10;      
             .main-menu__dropdown-item a {    
-                @extend .linked-text;
+                @extend .linked-text !optional;
                 background: $theme-background-header;
                 display: flex;
                 flex-direction: column;
