--- a/src/styles/settings/_colors.scss
+++ b/src/styles/settings/_colors.scss
@@ -14,5 +14,6 @@ $theme-selected: #eeeeee;
 $theme-hovered: #f9f9f9;
 $theme-text: #363636;
 $theme-text-darker: darken($theme-text, 40%);
+$theme-text-lighter: lighten($theme-text, 30%);
 $theme-shadow: #707070;
 
