--- a/src/styles/components/body/realestate/searchBar/advancedSearch/_sizePicker.scss
+++ b/src/styles/components/body/realestate/searchBar/advancedSearch/_sizePicker.scss
@@ -13,7 +13,7 @@
         position: relative;
         .range-picker__min {
             border: 1px solid $theme-box-border;
-            color: $theme-text-lighter;
+            color: $theme-text-darker;
             display: flex;
             flex-grow: 1;
             flex-shrink: 1;
