--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -26,4 +26,5 @@
 @import './components/body/realestate/searchBar/advancedSearch/floorPicker';
 @import './components/body/realestate/searchBar/advancedSearch/advancedSearchRow';
 @import './components//body/realestate/searchBar/advancedSearch/sizePicker';
-@import './components/body/realestate/searchBar/advancedSearch/entryDate'
+@import './components/body/realestate/searchBar/advancedSearch/entryDate';
+@import './components/body/common/blockPicker';
