--- a/src/styles/components/body/realestate/searchBar/advancedSearch/_advancedSearchRow.scss
+++ b/src/styles/components/body/realestate/searchBar/advancedSearch/_advancedSearchRow.scss
@@ -1,6 +1,9 @@
 .advanced-search-row {
+    border-bottom: 1px solid $theme-dropdown-border;
     display: flex;
     flex-direction: row-reverse;
     justify-content: center;
+    margin: 0 auto;
     padding: $std-size * 0.5;
+    width: 90%;
 }
